--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -1,37 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Products index{% endblock %}
+{% block title %}Products index
+{% endblock %}
 
 {% block body %}
-    <h1>Products index</h1>
+	<h1>Products index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>NameProducts</th>
-                <th>Price</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for product in products %}
-            <tr>
-                <td>{{ product.id }}</td>
-                <td>{{ product.nameProducts }}</td>
-                <td>{{ product.price }}</td>
-                <td>
-                    <a href="{{ path('app_products_show', {'id': product.id}) }}">show</a>
-                    <a href="{{ path('app_products_edit', {'id': product.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>NameProducts</th>
+				<th>Price</th>
+				<th>Gamme</th>
+				<th>Images</th>
+				<th>actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for product in products %}
+				<tr>
+					<td>{{ product.nameProducts }}</td>
+					<td>{{ product.price }}</td>
+					<td>{{ product.gamme.nameGamme }}</td>
+					<td>
+						{% for picture in product.pictures %}
+							<img src="{{ picture.namePicture }}" alt="{{ picture.namePicture }}">
+						{% endfor %}
+					</td>
+					<td>
+						<a href="{{ path('app_products_show', {'id': product.id}) }}">show</a>
+						<a href="{{ path('app_products_edit', {'id': product.id}) }}">edit</a>
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="4">no records found</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_products_new') }}">Create new</a>
+	<a href="{{ path('app_products_new') }}">Create new</a>
 {% endblock %}
