--- a/templates/gamme/show.html.twig
+++ b/templates/gamme/show.html.twig
@@ -1,26 +1,27 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
-{% block title %}Gamme{% endblock %}
+{% block title %}Gamme
+{% endblock %}
 
-{% block body %}
-    <h1>Gamme</h1>
+{% block admin %}
+	<h1>Gamme</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ gamme.id }}</td>
-            </tr>
-            <tr>
-                <th>NameGamme</th>
-                <td>{{ gamme.nameGamme }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ gamme.id }}</td>
+			</tr>
+			<tr>
+				<th>NameGamme</th>
+				<td>{{ gamme.nameGamme }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_gamme_index') }}">back to list</a>
+	<a href="{{ path('app_gamme_index') }}">back to list</a>
 
-    <a href="{{ path('app_gamme_edit', {'id': gamme.id}) }}">edit</a>
+	<a href="{{ path('app_gamme_edit', {'id': gamme.id}) }}">edit</a>
 
-    {{ include('gamme/_delete_form.html.twig') }}
+	{{ include('gamme/_delete_form.html.twig') }}
 {% endblock %}
