--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -4,41 +4,34 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Products index</h1>
-
-	<table class="table">
-		<thead>
-			<tr>
-				<th>NameProducts</th>
-				<th>Price</th>
-				<th>Gamme</th>
-				<th>Images</th>
-				<th>actions</th>
-			</tr>
-		</thead>
-		<tbody>
+	<div class="container-fluid">
+		<div class="row">
 			{% for product in products %}
-				<tr>
-					<td>{{ product.nameProducts }}</td>
-					<td>{{ product.price }}</td>
-					<td>{{ product.gamme.nameGamme }}</td>
-					<td>
-						{% for picture in product.pictures %}
-							<img src="{{ picture.namePicture }}" alt="{{ picture.namePicture }}">
-						{% endfor %}
-					</td>
-					<td>
-						<a href="{{ path('app_products_show', {'id': product.id}) }}">show</a>
-						<a href="{{ path('app_products_edit', {'id': product.id}) }}">edit</a>
-					</td>
-				</tr>
-			{% else %}
-				<tr>
-					<td colspan="4">no records found</td>
-				</tr>
+				<div class=" col-md-6 col-lg-4 col-xl-3 col-xxl-2 p-4 d-flex justify-content-center text-center">
+					<a href="{{ path('app_products_show', {'id': product.id}) }}">
+						<div class="card" style="width: 18rem;">
+							<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+								<div class="carousel-inner">
+									{% for picture in product.pictures %}
+										<div
+											class="carousel-item active">
+											{# <img src="{{ picture.namePicture }}" class="d-block w-100" alt="{{ picture.namePicture }}"> #}
+											<p class="d-block w-100">{{ picture.namePicture }}</p>
+										</div>
+									{% endfor %}
+								</div>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">{{ product.nameProducts }}</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="card-text">{{ product.gamme.nameGamme }}</p>
+								<p class="card-text">{{ product.price }}€</p>
+								<p class="btn btn-primary">voir le produit</p>
+							</div>
+						</div>
+					</a>
+				</div>
 			{% endfor %}
-		</tbody>
-	</table>
-
-	<a href="{{ path('app_products_new') }}">Create new</a>
-{% endblock %}
+		</div>
+	</div>
+</tbody></table><a href="{{ path('app_products_new') }}">Create new</a>{% endblock %}
