--- a/templates/products/new.html.twig
+++ b/templates/products/new.html.twig
@@ -1,11 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
-{% block title %}New Products{% endblock %}
+{% block title %}New Products
+{% endblock %}
 
-{% block body %}
-    <h1>Create new Products</h1>
+{% block admin %}
+	<h1>Create new Products</h1>
 
-    {{ include('products/_form.html.twig') }}
+	{{ include('products/_form.html.twig') }}
 
-    <a href="{{ path('app_products_index') }}">back to list</a>
+	<a href="{{ path('app_products_index') }}">back to list</a>
 {% endblock %}
