--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,11 +8,16 @@ body {
     position: fixed;
     left: 0;
     top: 0;
-    width: 200px;
+    width: 190px;
     height: 100%;
     background-color: #333;
     padding-top: 20px;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
 }
 
 .sidebar a {
