--- a/templates/products/new.html.twig
+++ b/templates/products/new.html.twig
@@ -1,9 +1,9 @@
-{% extends 'admin/index.html.twig' %}
+{% extends 'admin/dashboard.html.twig' %}
 
 {% block title %}New Products
 {% endblock %}
 
-{% block admin %}
+{% block Admin %}
 	<h1>Create new Products</h1>
 
 	{{ include('products/_form.html.twig') }}
