--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,9 +1,9 @@
-{% extends 'admin/index.html.twig' %}
+{% extends 'admin/dashboard.html.twig' %}
 
 {% block title %}User index
 {% endblock %}
 
-{% block admin %}
+{% block Admin %}
 	<h1>User index</h1>
 
 	<table class="table">
