--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,13 +26,7 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_main') }}">Accueil</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_products_index') }}">Produits</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_cart_index') }}">Panier</a>
+							<a class="nav-link" href="{{ path('app_products_index') }}">Koin Koin à vendre</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('app_main_admin') }}">Admin</a>
