--- a/templates/gamme/edit.html.twig
+++ b/templates/gamme/edit.html.twig
@@ -1,13 +1,14 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/dashboard.html.twig' %}
 
-{% block title %}Edit Gamme{% endblock %}
+{% block title %}Edit Gamme
+{% endblock %}
 
-{% block body %}
-    <h1>Edit Gamme</h1>
+{% block Admin %}
+	<h1>Edit Gamme</h1>
 
-    {{ include('gamme/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('gamme/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_gamme_index') }}">back to list</a>
+	<a href="{{ path('app_gamme_index') }}">back to list</a>
 
-    {{ include('gamme/_delete_form.html.twig') }}
+	{{ include('gamme/_delete_form.html.twig') }}
 {% endblock %}
