--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -3,12 +3,15 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
 
+    .card {
+        height: 100%;
+    }
+
     .sidebar {
-        position: fixed;
         left: 0;
         top: 0;
-        width: 190px;
-        height: 100%;
+        position: sticky;
+        height: 100vh;
         background-color: #333;
         padding-top: 20px;
         color: #fff;
@@ -20,18 +23,22 @@ body {
 
         a {
             display: block;
-            padding: 10px;
+            margin: 10%;
             color: #fff;
             text-decoration: none;
         }
 
         a:hover {
-            background-color: #555;
+            text-decoration: underline;
+            transform: scale(1.2);
         }
     }
 
     .content {
-        margin-left: 200px;
-        padding: 20px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+
+    input {
+        width: 50%;
     }
 }
