--- a/templates/gamme/new.html.twig
+++ b/templates/gamme/new.html.twig
@@ -1,9 +1,9 @@
-{% extends 'admin/index.html.twig' %}
+{% extends 'admin/dashboard.html.twig' %}
 
 {% block title %}New Gamme
 {% endblock %}
 
-{% block admin %}
+{% block Admin %}
 	<h1>Create new Gamme</h1>
 
 	{{ include('gamme/_form.html.twig') }}
