--- a/templates/products/edit.html.twig
+++ b/templates/products/edit.html.twig
@@ -1,13 +1,14 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/dashboard.html.twig' %}
 
-{% block title %}Edit Products{% endblock %}
+{% block title %}Edit Products
+{% endblock %}
 
-{% block body %}
-    <h1>Edit Products</h1>
+{% block Admin %}
+	<h1>Edit Products</h1>
 
-    {{ include('products/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('products/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_products_index') }}">back to list</a>
+	<a href="{{ path('app_products_index') }}">back to list</a>
 
-    {{ include('products/_delete_form.html.twig') }}
+	{{ include('products/_delete_form.html.twig') }}
 {% endblock %}
