--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -7,9 +7,9 @@
 	<div class="container-fluid">
 		<div class="row">
 			{% for product in products %}
-				<div class=" col-md-6 col-lg-4 col-xl-3 col-xxl-2 p-4 d-flex justify-content-center text-center">
-					<a href="{{ path('app_products_show', {'id': product.id}) }}">
-						<div class="card" style="width: 18rem;">
+				<div class="col-lg-6 col-xl-4 col-xxl-3 p-4 d-flex justify-content-center text-center">
+					<a href="{{ path('app_products_show', {'id': product.id}) }}" class="text-decoration-none">
+						<div class="card">
 							<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
 								<div class="carousel-inner">
 									{% for picture in product.pictures %}
@@ -23,7 +23,7 @@
 							</div>
 							<div class="card-body">
 								<h5 class="card-title">{{ product.nameProducts }}</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<p class="card-text">{{ product.description }}</p>
 								<p class="card-text">{{ product.gamme.nameGamme }}</p>
 								<p class="card-text">{{ product.price }}€</p>
 								<p class="btn btn-primary">voir le produit</p>
@@ -34,4 +34,4 @@
 			{% endfor %}
 		</div>
 	</div>
-</tbody></table><a href="{{ path('app_products_new') }}">Create new</a>{% endblock %}
+{% endblock %}
