--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -1,30 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Products{% endblock %}
+{% block title %}Products
+{% endblock %}
 
 {% block body %}
-    <h1>Products</h1>
+	<main class="text-center m-auto">
+		<h1>{{ product.nameProducts }}</h1>
+		<h3>{{ product.price }}€</h3>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
-                <th>NameProducts</th>
-                <td>{{ product.nameProducts }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ product.price }}</td>
-            </tr>
-        </tbody>
-    </table>
+		<p>{{ product.description }}</p>
 
-    <a href="{{ path('app_products_index') }}">back to list</a>
+		<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-inner">
+				{% for picture in product.pictures %}
+					<div
+						class="carousel-item active">
+						{# <img src="{{ picture.namePicture }}" class="d-block w-100" alt="{{ picture.namePicture }}"> #}
+						<p class="d-block w-100">{{ picture.namePicture }}</p>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
 
-    <a href="{{ path('app_products_edit', {'id': product.id}) }}">edit</a>
+		<a class="btn btn-primary" href="{{ path('app_products_index') }}">back to list</a>
+	</main>
 
-    {{ include('products/_delete_form.html.twig') }}
 {% endblock %}
