--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -9,33 +9,28 @@
 	<table class="table">
 		<thead>
 			<tr>
-				<th>Id</th>
+				<th>Pseudo</th>
 				<th>Email</th>
-				<th>Roles</th>
-				<th>Password</th>
 				<th>Name</th>
 				<th>FirstName</th>
 				<th>Address</th>
-				<th>Pseudo</th>
 				<th>City</th>
+				<th>Roles</th>
 				<th>actions</th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for user in users %}
 				<tr>
-					<td>{{ user.id }}</td>
+					<td>{{ user.pseudo }}</td>
 					<td>{{ user.email }}</td>
-					<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-					<td>{{ user.password }}</td>
 					<td>{{ user.name }}</td>
 					<td>{{ user.firstName }}</td>
 					<td>{{ user.address }}</td>
-					<td>{{ user.pseudo }}</td>
 					<td>{{ user.city }}</td>
+					<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
 					<td>
-						<a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-						<a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+						<a class="btn btn-primary" href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
 					</td>
 				</tr>
 			{% else %}
