--- a/templates/products/adminIndex.html.twig
+++ b/templates/products/adminIndex.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block Admin %}
-
+	<a class="btn btn-primary " href="{{ path('app_products_new')}}">Nouveau canard</a>
 	<table class="table">
 		<thead>
 			<tr>
