--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,6 +7,18 @@ body {
         height: 100%;
     }
 
+    .card {
+        height: 500px;
+        width: 300px;
+    }
+
+    .carousel-inner {
+        img {
+            height: 250px;
+            width: auto;
+        }
+    }
+
     .sidebar {
         left: 0;
         top: 0;
