--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -15,7 +15,7 @@ body {
     .carousel-inner {
         img {
             height: 250px;
-            width: auto;
+            width: 100%;
         }
     }
 
