--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -4,9 +4,22 @@
 {% endblock %}
 
 {% block body %}
+	<div class="container text-center">
+		<div class="column d-inline-flex m-3">
+			<select name="gamme" id="gamme_canard" class="m-3">
+				<option value="" class="disabled">toulécanard</option>
+				{% for gamme in gammes %}
+					<option value="{{ gamme.id }}">{{ gamme.nameGamme }}</option>
+				{% endfor %}
+			</select>
+			<form role="search" class="m-3">
+				<input class="form-control me-2" type="search" placeholder="Recherche ton canard" aria-label="Search">
+			</form>
+		</div>
+	</div>
 	<div class="container-fluid">
 		<div class="row">
-			{% for product in products.data %}
+			{% for product in products %}
 				<div class="col-lg-6 col-xl-4 col-xxl-3 p-4 d-flex justify-content-center text-center">
 					<a href="{{ path('app_products_show', {'id': product.id}) }}" class="text-decoration-none card">
 						<div class="card">
@@ -21,19 +34,42 @@
 							</div>
 							<div class="card-body">
 								<h5 class="card-title">{{ product.nameProducts }}</h5>
-								<p class="card-text">{{ product.description|slice(0, 15) ~ (product.description|length > 15 ? '...' : '') }}</p>
-								<p class="card-text">{{ product.gamme.nameGamme }}</p>
+								<p class="card-text">{{ product.description|slice(0, 23) ~ (product.description|length > 23 ? '...' : '') }}</p>
+								<p class="card-text" name="gamme" id="{{ product.gamme.id }}">{{ product.gamme.nameGamme }}</p>
 								<p class="card-text">{{ product.price }}€</p>
-								<p class="btn btn-primary">voir le produit</p>
+								<p class="btn btn-primary">Voir le Koin Koin</p>
 							</div>
 						</div>
 					</a>
 				</div>
 			{% endfor %}
-			{% set path = 'app_products_index' %}
-			{% set pages = products.pages %}
-			{% set currentPage = products.page %}
-			{% include "_partials/_pagination.html.twig" %}
+			{# {% set path = 'app_products_index' %}
+												{% set pages = products.pages %}
+												{% set currentPage = products.page %}
+												{% include "_partials/_pagination.html.twig" %} #}
 		</div>
 	</div>
+	<script>
+		document.addEventListener('DOMContentLoaded', function () { // Sélectionnez le select et toutes les cards
+var select = document.getElementById('gamme_canard');
+var cards = document.querySelectorAll('.col-lg-6.col-xl-4.col-xxl-3.p-4.d-flex.justify-content-center.text-center');
+
+// Écoutez les changements sur le select
+select.addEventListener('change', function () { // Récupérez la valeur sélectionnée dans le select
+var selectedGammeId = select.value;
+
+// Parcourez toutes les cards
+cards.forEach(function (card) { // Récupérez l'ID de la gamme associée à la card
+var cardGammeId = card.querySelector('.card-text[name="gamme"]').id;
+
+// Vérifiez si l'ID de la gamme de la card correspond à la gamme sélectionnée
+if (cardGammeId !== selectedGammeId && selectedGammeId !== "") { // Si les ID ne correspondent pas, ajoutez la classe d-none
+card.classList.add('d-none');
+} else { // Sinon, retirez la classe d-none
+card.classList.remove('d-none');
+}
+});
+});
+});
+	</script>
 {% endblock %}
