--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
+  background-color: #f0f0f0;
+}
+body h2 {
+  margin-top: 5%;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 body .card {
   height: 100%;
@@ -14,10 +19,20 @@ body .carousel-inner img {
   height: 250px;
   width: 100%;
 }
+body .presentation {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+body .presentation img {
+  width: 50%;
+  height: auto;
+}
 body .sidebar {
   left: 0;
   top: 0;
-  position: -webkit-sticky;
   position: sticky;
   height: 100vh;
   background-color: #333;
@@ -44,4 +59,23 @@ body .content {
 }
 body input {
   width: 50%;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+nav ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+nav ul li a {
+  text-decoration: none;
+  color: #00a8e8;
+  transition: color 0.3s;
+}
+nav ul li a:hover {
+  color: #0083b5;
 }/*# sourceMappingURL=style.css.map */
