--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,10 +28,11 @@
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('app_products_index') }}">Koin Koin à vendre</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_main_admin') }}">Admin</a>
-						</li>
-
+						{% if is_granted("ROLE_ADMIN") %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('app_main_admin') }}">Admin</a>
+							</li>
+						{% endif %}
 						{% if app.user %}
 							<li class="nav-item">
 								<a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
