--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,20 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}Hello MainController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/ewenm/OneDrive/Bureau/CDA/exo/tp laravel/exoLaravel/e-commerce/E-commerce/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/ewenm/OneDrive/Bureau/CDA/exo/tp laravel/exoLaravel/e-commerce/E-commerce/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<h1 class="text-center m-5">Bienvenu sur le bon koin, le site du canard en koin</h1>
+    <h3 class="text-center m-5">essayer notre canard aleatoir ici</h3>
+	<div class="container-fluid" id="productsContainer">
+		<div class="row">
+			{% for product in products|slice(0, 3) %}
+				<div class="col-4 p-4 d-flex justify-content-center text-center">
+					<a href="{{ path('app_products_show', {'id': product.id}) }}" class="text-decoration-none card">
+						<div class="card">
+							<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+								<div class="carousel-inner">
+									{% for picture in product.pictures %}
+										<div class="carousel-item active">
+											<img src="{{ asset('image/pictures/') ~ picture.namePicture }}" alt="{{ product.slug }}">
+										</div>
+									{% endfor %}
+								</div>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">{{ product.nameProducts }}</h5>
+								<p class="card-text">{{ product.description|slice(0, 23) ~ (product.description|length > 23 ? '...' : '') }}</p>
+								<p class="card-text" name="gamme" id="{{ product.gamme.id }}">{{ product.gamme.nameGamme }}</p>
+								<p class="card-text">{{ product.price }}€</p>
+								<p class="btn btn-primary">Voir le Koin Koin</p>
+							</div>
+						</div>
+					</a>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
