--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -4,22 +4,25 @@
 {% endblock %}
 
 {% block body %}
+
+	<h2 class="text-center">KoinKoin à vendre</h2>
+
 	<div class="container text-center">
 		<div class="column d-inline-flex m-3">
-			<select name="gamme" id="gamme_canard" class="m-3">
-				<option value="" class="disabled">toulécanard</option>
-				{% for gamme in gammes %}
-					<option value="{{ gamme.id }}">{{ gamme.nameGamme }}</option>
-				{% endfor %}
-			</select>
 			<form role="search" class="m-3">
-				<input class="form-control me-2" type="search" placeholder="Recherche ton canard" aria-label="Search">
+				<select name="selected_gamme" id="gammeSelect" class="m-3">
+					<option value="0" class="text-center">toulécanard</option>
+					{% for gamme in gammes %}
+						<option value="{{ gamme.id }}" class="text-center">{{ gamme.nameGamme }}</option>
+					{% endfor %}
+				</select>
+				<button class="btn">Valider</button>
 			</form>
 		</div>
 	</div>
-	<div class="container-fluid">
+	<div class="container-fluid" id="productsContainer">
 		<div class="row">
-			{% for product in products %}
+			{% for product in products.data %}
 				<div class="col-lg-6 col-xl-4 col-xxl-3 p-4 d-flex justify-content-center text-center">
 					<a href="{{ path('app_products_show', {'id': product.id}) }}" class="text-decoration-none card">
 						<div class="card">
@@ -43,33 +46,11 @@
 					</a>
 				</div>
 			{% endfor %}
-			{# {% set path = 'app_products_index' %}
-												{% set pages = products.pages %}
-												{% set currentPage = products.page %}
-												{% include "_partials/_pagination.html.twig" %} #}
+			{% set path = 'app_products_index' %}
+			{% set pages = products.pages %}
+			{% set currentPage = products.page %}
+			{% include "_partials/_pagination.html.twig" %}
 		</div>
 	</div>
-	<script>
-		document.addEventListener('DOMContentLoaded', function () { // Sélectionnez le select et toutes les cards
-var select = document.getElementById('gamme_canard');
-var cards = document.querySelectorAll('.col-lg-6.col-xl-4.col-xxl-3.p-4.d-flex.justify-content-center.text-center');
 
-// Écoutez les changements sur le select
-select.addEventListener('change', function () { // Récupérez la valeur sélectionnée dans le select
-var selectedGammeId = select.value;
-
-// Parcourez toutes les cards
-cards.forEach(function (card) { // Récupérez l'ID de la gamme associée à la card
-var cardGammeId = card.querySelector('.card-text[name="gamme"]').id;
-
-// Vérifiez si l'ID de la gamme de la card correspond à la gamme sélectionnée
-if (cardGammeId !== selectedGammeId && selectedGammeId !== "") { // Si les ID ne correspondent pas, ajoutez la classe d-none
-card.classList.add('d-none');
-} else { // Sinon, retirez la classe d-none
-card.classList.remove('d-none');
-}
-});
-});
-});
-	</script>
 {% endblock %}
