--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -33,12 +33,8 @@
 				<td>{{ user.firstName }}</td>
 			</tr>
 			<tr>
-				<th>Mail</th>
-				<td>{{ user.mail }}</td>
-			</tr>
-			<tr>
 				<th>Adress</th>
-				<td>{{ user.adress }}</td>
+				<td>{{ user.address }}</td>
 			</tr>
 			<tr>
 				<th>Pseudo</th>
